Electron app working

--- a/Learn2CodeAngular/src/app/Login/login-comp/login-comp.component.html
+++ b/Learn2CodeAngular/src/app/Login/login-comp/login-comp.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-dark">
   <a class="navbar-brand" href="#">
     <img
-      src="../.././assets/pics/HD logo.png"
+      src="assets/pics/HD logo.png"
       width="40"
       height="40"
       class="d-inline-block align-top"
@@ -53,7 +53,7 @@
       <div class="col-md-6">
         <div style="margin-left: 10rem">
           <img
-            src="../.././assets/pics/landing page.jpg"
+            src="assets/pics/landing page.jpg"
             width="458"
             height="432"
             class="d-inline-block align-top"
