--- a/Learn2CodeAngular/src/app/Student/register/register.component.html
+++ b/Learn2CodeAngular/src/app/Student/register/register.component.html
@@ -2,7 +2,7 @@
   <!-- hello vraj -->
   <a class="navbar-brand" href="#">
     <img
-      src="../.././assets/pics/HD logo.png"
+      src="assets/pics/HD logo.png"
       width="40"
       height="40"
       class="d-inline-block align-top"
@@ -72,7 +72,7 @@
           </p>
 
       <img
-        src="../.././assets/pics/education-design-for-mobile-online-course-vector.jpg"
+        src="assets/pics/education-design-for-mobile-online-course-vector.jpg"
         style="height: 26rem; width: 27rem; margin-left: 1rem"
         class="d-inline-block align-top"
         alt=""
