--- a/Learn2CodeAngular/src/app/Tutor/application/application.component.html
+++ b/Learn2CodeAngular/src/app/Tutor/application/application.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-dark">
   <a class="navbar-brand" href="#">
     <img
-      src="../.././assets/pics/HD logo.png"
+      src="assets/pics/HD logo.png"
       width="40"
       height="40"
       class="d-inline-block align-top"
@@ -68,7 +68,7 @@
           <br />
           <br />
           <img
-            src="../.././assets/pics/Project_71-02.jpg"
+            src="assets/pics/Project_71-02.jpg"
             style="height: 24rem; width: 27rem; margin-left: 1rem"
             class="d-inline-block align-top"
             alt=""
